[gd_scene load_steps=8 format=3 uid="uid://c54qlxs7mr3qm"]

[ext_resource type="Script" uid="uid://d7h5wqb0lxnm" path="res://scripts/piece/piece_object.gd" id="1_247x2"]
[ext_resource type="Script" uid="uid://dvppjkfmxeqhp" path="res://scripts/piece/piecetype/pawn.gd" id="2_7j1fu"]
[ext_resource type="ArrayMesh" uid="uid://bhpxj4ybm00m3" path="res://assets/mesh/pawn_mesh.obj" id="2_247x2"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ny8vt"]
margin = 0.0
size = Vector3(2, 4.5, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2285w"]
resource_local_to_scene = true
transparency = 1
cull_mode = 1
shading_mode = 0
albedo_color = Color(0, 0, 0, 1)
grow = true
grow_amount = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qt51j"]
resource_local_to_scene = true
resource_name = "piece_color"
render_priority = 1
next_pass = SubResource("StandardMaterial3D_2285w")
transparency = 1
albedo_color = Color(1, 1, 1, 0)
emission = Color(0.5, 0.5, 0.5, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yj48y"]
resource_local_to_scene = true
resource_name = "piece_color"
next_pass = SubResource("StandardMaterial3D_qt51j")
roughness_texture_channel = 4
clearcoat_enabled = true
clearcoat_roughness = 0.25

[node name="Pawn" type="Node3D" groups=["Pawn", "Piece"]]
script = ExtResource("2_7j1fu")

[node name="Piece_Object" type="AnimatableBody3D" parent="."]
script = ExtResource("1_247x2")

[node name="Collision" type="CollisionShape3D" parent="Piece_Object"]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0.676774, 0)
shape = SubResource("BoxShape3D_ny8vt")

[node name="Piece_Mesh" type="MeshInstance3D" parent="Piece_Object"]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0)
extra_cull_margin = 36.03
mesh = ExtResource("2_247x2")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_yj48y")

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="input_event" from="Piece_Object" to="." method="_on_input_event"]
[connection signal="mouse_entered" from="Piece_Object" to="Piece_Object" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Piece_Object" to="Piece_Object" method="_on_mouse_exited"]
[connection signal="ready" from="Piece_Object" to="Piece_Object" method="_on_ready"]
